Implement `POST /v1/users/<username>/token`
